Add reset CSS and start HTML.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <link rel="stylesheet" href="Resources/CSS/style.css">
+  <link rel="stylesheet" href="Resources/CSS/reset.css" type="text/css">
+   <link rel="stylesheet" href="Resources/CSS/style.css" type="text/css">
   <title>Colmar Academy</title>
 </head>
 	<body>
 	
+	<div class="nav">
+		<img src="Resources/images/ic-logo.svg">
+		<span>COLMARACADEMY</span>
+		<div class="menu">
+			<ul>
+				<li>Our Campus</li>
+				<li>Online</li>
+				<li>For Companies</li>
+				<li>Sign In</li>
+			</ul>
+		</div>
+		<div class="Mobile-menu">
+			<img src="Resources/images/ic-on-campus.svg">
+			<img src="Resources/images/ic-online.svg">
+			<img src="Resources/images/ic-login.svg">
+		</div>
+	</div>
 	
 	
 	</body>
