--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 		</div>
 	</div>
 	
+	<div class="banner">
+		<img src="Resources/images/banner.jpg">
+		<div class="banner-info">
+			<h1>Learn something new everyday</h1>
+			<h6>Lorem ipsuym dolor sit amet, consectetur adipiscing elit.</h6>
+			<button>Start here</button>
+		</div>
+	</div>
+	
 	
 	</body>
 	
