--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 	<body>
 	
-	<div class="nav">
+		<div class="nav">
 		<img src="Resources/images/ic-logo.svg">
 		<span>COLMARACADEMY</span>
 		<div class="menu">
@@ -25,7 +25,9 @@
 		</div>
 	</div>
 	
-	<div class="banner">
+		<div class="Main-content">
+		
+			<div class="banner">
 		<img src="Resources/images/banner.jpg">
 		<div class="banner-info">
 			<h1>Learn something new everyday</h1>
@@ -34,7 +36,116 @@
 		</div>
 	</div>
 	
+			<div class="content-block">
+				<div class="Image-block">
+					<img src="Resources/images/information-main.jpg">
+					<h2>It doesn't hurt to keep practicing</h2>
+					<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+					<span>Emanuel, Sr Strategist at Hiring.com</span>
+				</div>
+				<div class="news-blocks">
+					<div class="news">
+						<img src="Resources/images/information-orientation.jpg">
+						<div class="News-info">
+							<h6>Orientation date</h6>
+							<p>Tue 10/11 & Wednesday 10/12: 8am-3pm</p>
+							<a>Read more</a>
+						</div>
+					</div>
+					<div class="news">
+						<img src="Resources/images/information-campus.jpg">
+						<div class="News-info">
+							<h6>Our campus</h6>
+							<p>Find which campus is close by you</p>
+							<a>Read more</a>
+						</div>					
+					</div>
+					<div class="news">
+						<img src="Resources/images/information-guest-lecture.jpg">
+						<div class="News-info">
+							<h6>Our guest lecture</h6>
+							<p>Join a keynote with Oliver Sack about music in medical treatment</p>
+							<a>Read more</a>
+						</div>					
+					</div>										
+				</div>
+			</div>
+			
+			<div class="Start-learning">
+			
+				<div class="learning-block">
+					<img src="Resources/images/course-software.jpg">
+					<h6>Software engineering</h6>
+					<p>COURSES</p>
+					<p>Web Development, Mobile Development, iOT, APIs</p>
+				</div>
+				<div class="learning-block">
+					<img src="Resources/images/course-computer-art.jpg">
+					<h6>Computer art</h6>
+					<p>COURSES</p>
+					<p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+				</div>
+				<div class="learning-block">
+					<img src="Resources/images/course-design.jpg">
+					<h6>Design</h6>
+					<p>COURSES</p>
+					<p>User Experience Design, User Research, Visual Design</p>
+				</div>
+				<div class="learning-block">
+					<img src="Resources/images/course-data.jpg">
+					<h6>Data</h6>
+					<p>COURSES</p>
+					<p>Data Science, Big Data, SQL, Data Visualization</p>
+				</div>
+				<div class="learning-block">
+					<img src="Resources/images/course-business.jpg">
+					<h6>Business</h6>
+					<p>COURSES</p>
+					<p>Product Development, Business Development, Startup</p>
+				</div>
+				<div class="learning-block">
+					<img src="Resources/images/course-marketing.jpg">
+					<h6>Marketing</h6>
+					<p>COURSES</p>
+					<p>Analytics, Content Marketing, Mobile Marketing</p>
+				</div>			
+			</div>
+			
+			<div class="Thesis">
+				<div class="thesis-main">
+					<video width="100%" height="auto" controls>
+					<source src="Resources/videos/thesis.mp4" type="video/mp4">
+					</video>
+					<h6>Reimagining urban</h6>
+					<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristque ligula."</p>
+				</div>
+					<div class="news">
+						<img src="Resources/images/thesis-fisma.jpg">
+						<div class="News-info">
+							<h6>Fisma: Design and</h6>
+							<p>Designer showcase of new prototype product</p>
+						</div>					
+					</div>
+					<div class="news">
+						<img src="Resources/images/thesis-now-and-then.jpg">
+						<div class="News-info">
+							<h6>Now and then</h6>
+							<p>Research study about New York</p>
+						</div>					
+					</div>						
+			</div>
+			
+			<footer>
+				<span>© 2016 Colmar Academy. All rights reserved</span>
+				<div class="nav">
+					<ul>
+						<li>Terms</li>
+						<li>Privacy</li>
+					</ul>
+				</div>
+			</footer>
 	
+		</div>
 	</body>
 	
 </html>
