--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Colmar Academy</title>
 </head>
 	<body>
-	
+		<!-- Navigation -->
 		<div class="nav">
 		<img src="Resources/images/ic-logo.svg">
 		<span>COLMARACADEMY</span>
@@ -18,6 +18,7 @@
 				<li>Sign In</li>
 			</ul>
 		</div>
+		<!-- Mobile Navigation -->
 		<div class="Mobile-menu">
 			<img src="Resources/images/ic-on-campus.svg">
 			<img src="Resources/images/ic-online.svg">
@@ -26,7 +27,7 @@
 	</div>
 	
 		<div class="Main-content">
-		
+			<!-- Jumbotron -->
 			<div class="banner">
 		<img src="Resources/images/banner.jpg">
 		<div class="banner-info">
@@ -35,7 +36,7 @@
 			<button>Start here</button>
 		</div>
 	</div>
-	
+			<!-- Quote and News Block -->
 			<div class="content-block">
 				<div class="Image-block">
 					<img src="Resources/images/information-main.jpg">
@@ -70,7 +71,7 @@
 					</div>										
 				</div>
 			</div>
-			
+			<!-- Course Listings -->
 			<div class="Start-learning">
 			
 				<div class="learning-block">
@@ -110,7 +111,7 @@
 					<p>Analytics, Content Marketing, Mobile Marketing</p>
 				</div>			
 			</div>
-			
+			<!-- Thesis Exhibit -->
 			<div class="Thesis">
 				<div class="thesis-main">
 					<video width="100%" height="auto" controls>
@@ -134,7 +135,7 @@
 						</div>					
 					</div>						
 			</div>
-			
+			<!-- Footer -->
 			<footer>
 				<span>© 2016 Colmar Academy. All rights reserved</span>
 				<div class="nav">
