--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 	<body>
 		<!-- Navigation -->
+		<div class="flex-container">
 		<div class="nav">
 		<img src="Resources/images/ic-logo.svg">
 		<span>COLMARACADEMY</span>
@@ -24,8 +25,9 @@
 			<img src="Resources/images/ic-online.svg">
 			<img src="Resources/images/ic-login.svg">
 		</div>
-	</div>
-	
+		</div>
+		</div>
+		
 		<div class="Main-content">
 			<!-- Jumbotron -->
 			<div class="banner">
