--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		
 		<div class="Main-content">
 			<!-- Jumbotron -->
+			<div class="flex-container">
 			<div class="banner">
 		<img src="Resources/images/banner.jpg">
 		<div class="banner-info">
@@ -37,10 +38,12 @@
 			<h6>Lorem ipsuym dolor sit amet, consectetur adipiscing elit.</h6>
 			<button>Start here</button>
 		</div>
-	</div>
+		</div>
+			</div>
 			<!-- Quote and News Block -->
+			<div class="flex-container">
 			<div class="content-block">
-				<div class="Image-block">
+				<div class="image-block">
 					<img src="Resources/images/information-main.jpg">
 					<h2>It doesn't hurt to keep practicing</h2>
 					<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
@@ -73,9 +76,11 @@
 					</div>										
 				</div>
 			</div>
+			</div>
 			<!-- Course Listings -->
+			<div class="flex-container">
 			<div class="Start-learning">
-			
+				<h2>Start learning</h2>
 				<div class="learning-block">
 					<img src="Resources/images/course-software.jpg">
 					<h6>Software engineering</h6>
@@ -113,8 +118,10 @@
 					<p>Analytics, Content Marketing, Mobile Marketing</p>
 				</div>			
 			</div>
+			</div>
 			<!-- Thesis Exhibit -->
 			<div class="Thesis">
+				<h2>Thesis exhibit</h2>
 				<div class="thesis-main">
 					<video width="100%" height="auto" controls>
 					<source src="Resources/videos/thesis.mp4" type="video/mp4">
