Update working CSS.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 		<!-- Navigation -->
 		<div class="flex-container">
 		<div class="nav">
-		<img src="Resources/images/ic-logo.svg">
-		<span>COLMARACADEMY</span>
+		<div class="logo-block">
+			<img src="Resources/images/ic-logo.svg">
+			<span><h1>COLMAR</h1><h2>ACADEMY</h2></span>
+		</div>
 		<div class="menu">
 			<ul>
 				<li>Our Campus</li>
@@ -34,7 +36,7 @@
 			<div class="banner">
 		<img src="Resources/images/banner.jpg">
 		<div class="banner-info">
-			<h1>Learn something new everyday</h1>
+			<h3>Learn something new everyday</h3>
 			<h6>Lorem ipsuym dolor sit amet, consectetur adipiscing elit.</h6>
 			<button>Start here</button>
 		</div>
@@ -45,7 +47,7 @@
 			<div class="content-block">
 				<div class="image-block">
 					<img src="Resources/images/information-main.jpg">
-					<h2>It doesn't hurt to keep practicing</h2>
+					<h4>It doesn't hurt to keep practicing</h4>
 					<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
 					<span>Emanuel, Sr Strategist at Hiring.com</span>
 				</div>
@@ -80,7 +82,7 @@
 			<!-- Course Listings -->
 			<div class="flex-container">
 			<div class="Start-learning">
-				<h2>Start learning</h2>
+				<h4>Start learning</h4>
 				<div class="learning-block">
 					<img src="Resources/images/course-software.jpg">
 					<h6>Software engineering</h6>
@@ -121,7 +123,7 @@
 			</div>
 			<!-- Thesis Exhibit -->
 			<div class="Thesis">
-				<h2>Thesis exhibit</h2>
+				<h4>Thesis exhibit</h4>
 				<div class="thesis-main">
 					<video width="100%" height="auto" controls>
 					<source src="Resources/videos/thesis.mp4" type="video/mp4">
