--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 			</div>
 			<!-- Course Listings -->
-			<h4>Start learning</h4>
+			<h4 style="text-align: center;">Start learning</h4>
 			<div class="flex-container">
 			<div class="Start-learning">
 				
@@ -123,8 +123,8 @@
 			</div>
 			</div>
 			<!-- Thesis Exhibit -->
+			<h4 style="text-align: center;">Thesis exhibit</h4>
 			<div class="Thesis">
-				<h4>Thesis exhibit</h4>
 				<div class="thesis-main">
 					<video width="100%" height="auto" controls>
 					<source src="Resources/videos/thesis.mp4" type="video/mp4">
@@ -132,6 +132,7 @@
 					<h6>Reimagining urban</h6>
 					<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristque ligula."</p>
 				</div>
+				<div class="thesis-subs">
 					<div class="news">
 						<img src="Resources/images/thesis-fisma.jpg">
 						<div class="News-info">
@@ -145,17 +146,16 @@
 							<h6>Now and then</h6>
 							<p>Research study about New York</p>
 						</div>					
-					</div>						
+					</div>
+				</div>					
 			</div>
 			<!-- Footer -->
 			<footer>
 				<span>© 2016 Colmar Academy. All rights reserved</span>
-				<div class="nav">
-					<ul>
+					<ul class="nav">
 						<li>Terms</li>
 						<li>Privacy</li>
 					</ul>
-				</div>
 			</footer>
 	
 		</div>
