--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			<!-- Footer -->
 			<footer>
 				<span>© 2016 Colmar Academy. All rights reserved</span>
-					<ul class="nav">
+					<ul class="footer-nav">
 						<li>Terms</li>
 						<li>Privacy</li>
 					</ul>
