--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<img src="Resources/images/information-main.jpg">
 					<h4>It doesn't hurt to keep practicing</h4>
 					<p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam at commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-					<span>Emanuel, Sr Strategist at Hiring.com</span>
+					<span class="quote">Emanuel, Sr Strategist at Hiring.com</span>
 				</div>
 				<div class="news-blocks">
 					<div class="news">
