--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Colmar Academy</title>
-        <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
+        <link href="Resources/CSS/reset.css" type="text/css" rel="stylesheet">
         <link href="Resources/CSS/style.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
         <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
