--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="desktop">
         <div class="content">
           <div class="logo-box">
-            <img class="icon" src="./resources/images/ic-logo.svg">
+            <img class="icon" src="Resources/images/ic-logo.svg">
             <h5><a href="index.html" class="colmar">COLMAR</a><a href="index.html" class="academy">ACADEMY</a>
             </h5>
           </div>
@@ -34,10 +34,10 @@
     <header class="mobile">
         <nav>
             <ul>
-                <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
-                <li><a href="#"><img src="./resources/images/ic-on-campus.svg"></a></li>
-                <li><a href="#"><img src="./resources/images/ic-online.svg"></a></li>
-                <li><a href="#"><img src="./resources/images/ic-login.svg"></a></li>
+                <li><a href="#"><img src="Resources/images/ic-logo.svg"></a></li>
+                <li><a href="#"><img src="Resources/images/ic-on-campus.svg"></a></li>
+                <li><a href="#"><img src="Resources/images/ic-online.svg"></a></li>
+                <li><a href="#"><img src="Resources/images/ic-login.svg"></a></li>
             </ul>
         </nav>    
     </header>
